Initialize github oauth2 module

--- a/auth/config.example
+++ b/auth/config.example
@@ -4,5 +4,10 @@ google:
   clientSecret: <get_from_juan>
   redirectUri: <oidc_redirect_uri>
 
+github:
+  clientID: <get_from_juan>
+  clientSecret: <get_from_juan>
+  redirectUri: <oidc_redirect_uri>
+
 logger-output-path: logs/logs.json
 oauthStateString: <any_string>
